# hermetic-llvm

./: .bazelrc
config/: defs.bzl
e2e/rules_cc/: BUILD.bazel  defs.bzl  profile_main.cc  profile_output_test.py
extensions/: llvm_source.bzl
runtimes/: BUILD.bazel  copy_to_resource_directory.bzl
runtimes/compiler-rt/: BUILD.bazel
toolchain/: BUILD.bazel
toolchain/args/: BUILD.bazel
toolchain/bootstrap/: bootstrap_binary.bzl
toolchain/features/: BUILD.bazel
toolchain/runtimes/: BUILD.bazel  with_cfg_runtimes_common.bzl
toolchain/runtimes/args/: BUILD.bazel
tools/: defs.bzl
