load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@llvm//:defs.bzl", "exec_test")
load("@platforms//host:constraints.bzl", "HOST_CONSTRAINTS")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_static_library.bzl", "cc_static_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_cc//cc:objc_library.bzl", "objc_library")
load("@rules_python//python:defs.bzl", "py_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load(
    "//:defs.bzl",
    "asan_cc_binary",
    "cfi_cc_binary",
    "dfsan_cc_binary",
    "fuzzer_asan_cc_binary",
    "fuzzer_cc_binary",
    "lsan_cc_binary",
    "msan_cc_binary",
    "nsan_cc_binary",
    "opt_binary",
    "profile_cc_binary",
    "rtsan_cc_binary",
    "safestack_cc_binary",
    "tsan_cc_binary",
    "tysan_cc_binary",
    "ubsan_cc_binary",
    "xray_cc_binary",
)
load(":bazel_version.bzl", "validate_static_library_compatible")

_VALIDATE_STATIC_LIBRARY_COMPATIBLE = validate_static_library_compatible()

cc_library(
    name = "objc_c_lib",
    hdrs = ["objc_c_lib.h"],
    tags = ["manual"],
)

objc_library(
    name = "objc_lib",
    srcs = ["objc_lib.m"],
    hdrs = ["objc_lib.h"],
    tags = ["manual"],
    deps = [":objc_c_lib"],
    alwayslink = True,
)

cc_test(
    name = "objc_cc_test",
    srcs = ["objc_cc_test.cc"],
    target_compatible_with = select({
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [":objc_lib"],
)

opt_binary(
    name = "no_optimize",
    srcs = ["no_optimize.cc"],
    copts = ["-O0"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

opt_binary(
    name = "optimize",
    srcs = ["optimize.cc"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

# dynamic linker + dynamic runtime libs
cc_binary(
    name = "main_dynamic",
    srcs = ["main.cc"],
    linkstatic = False,
    target_compatible_with = select({
        # We do not support musl libc.so
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

# dynamic linker + static runtime libs
cc_binary(
    name = "main_default",
    srcs = ["main.cc"],
)

# same as default
cc_binary(
    name = "main_static",
    srcs = ["main.cc"],
    linkstatic = True,
)

# dynamic linker + static runtime libs (even tho -static)
# but because musl adds -static-pie, no dynamic linker at all.
cc_binary(
    name = "main_fully_static",
    srcs = ["main.cc"],
    features = ["fully_static_link"],
    linkstatic = True,
    target_compatible_with = select({
        # only musl supports fully static linking.
        "@llvm//constraints/libc:musl": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

# Implies dynamic_runtime_libs
cc_test(
    name = "test",
    srcs = ["main.cc"],
    exec_compatible_with = HOST_CONSTRAINTS,
    # remote-exec tests can't run without forcing the target platform to match
    # the remote exec platform.
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        # We do not support musl libc.so
        "@llvm//constraints/libc:musl": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cc_binary(
    name = "main",
    srcs = ["main.cc"],
    # We provide these libs explicitly via the toolchain runtime_library.
    # These options are all no-ops as they resolve to empty stubs.
    # This is basically a test that we can properly ignore these opts.
    linkopts = [
        "-lc++",
        "-lc++abi",
        "-lunwind",
    ],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

# TODO(zbarsky): Turn more of this into a macro once we have more sanitizers?
ubsan_cc_binary(
    name = "ubsan_fail",
    srcs = ["ubsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

exec_test(
    name = "ubsan_output_test",
    srcs = ["ubsan_output_test.sh"],
    data = [":ubsan_fail"],
    env = {"BINARY": "$(rootpath :ubsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

cfi_cc_binary(
    name = "cfi_fail",
    srcs = ["cfi_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "cfi_output_test",
    srcs = ["cfi_output_test.sh"],
    data = [":cfi_fail"],
    env = {"BINARY": "$(rootpath :cfi_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

msan_cc_binary(
    name = "msan_fail",
    srcs = ["msan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "msan_output_test",
    srcs = ["msan_output_test.sh"],
    data = [":msan_fail"],
    env = {"BINARY": "$(rootpath :msan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

dfsan_cc_binary(
    name = "dfsan_fail",
    srcs = ["dfsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "dfsan_output_test",
    srcs = ["dfsan_output_test.sh"],
    data = [":dfsan_fail"],
    env = {
        "BINARY": "$(rootpath :dfsan_fail)",
        "DFSAN_OPTIONS": "warn_unimplemented=1",
    },
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

nsan_cc_binary(
    name = "nsan_fail",
    srcs = ["nsan_fail.cc"],
    target_compatible_with = select({
        # nsan is x86 only
        "@llvm//platforms/config:linux_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "nsan_output_test",
    srcs = ["nsan_output_test.sh"],
    data = [":nsan_fail"],
    env = {
        "BINARY": "$(rootpath :nsan_fail)",
        "NSAN_OPTIONS": "check_nan=true,halt_on_error=0",
    },
    rule = sh_test,
    target_compatible_with = select({
        # nsan is x86 only
        "@llvm//platforms/config:linux_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

safestack_cc_binary(
    name = "safestack_fail",
    srcs = ["safestack_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "safestack_output_test",
    srcs = ["safestack_output_test.sh"],
    data = [":safestack_fail"],
    env = {"BINARY": "$(rootpath :safestack_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

rtsan_cc_binary(
    name = "rtsan_fail",
    srcs = ["rtsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "rtsan_output_test",
    srcs = ["rtsan_output_test.sh"],
    data = [":rtsan_fail"],
    env = {"BINARY": "$(rootpath :rtsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

tysan_cc_binary(
    name = "tysan_fail",
    srcs = ["tysan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "tysan_output_test",
    srcs = ["tysan_output_test.sh"],
    data = [":tysan_fail"],
    env = {"BINARY": "$(rootpath :tysan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

tsan_cc_binary(
    name = "tsan_fail",
    srcs = ["tsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "tsan_output_test",
    srcs = ["tsan_output_test.sh"],
    data = [":tsan_fail"],
    env = {"BINARY": "$(rootpath :tsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        # firecracker + docker on arm64 is too restrictive.
        "@llvm//platforms/config:linux_x86_64": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

asan_cc_binary(
    name = "asan_fail",
    srcs = ["asan_fail.cc"],
    linkopts = [
        "-Wl,--icf=none",
    ],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "asan_output_test",
    srcs = ["asan_output_test.sh"],
    data = [":asan_fail"],
    env = {"BINARY": "$(rootpath :asan_fail)"},
    rule = sh_test,
)

lsan_cc_binary(
    name = "lsan_fail",
    srcs = ["lsan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "lsan_output_test",
    srcs = ["lsan_output_test.sh"],
    data = [":lsan_fail"],
    env = {"BINARY": "$(rootpath :lsan_fail)"},
    rule = sh_test,
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

# Test that this toolchain properly supports the supports_pic capability.
cc_binary(
    name = "supports_pic_",
    srcs = ["supports_pic.cc"],
    linkshared = True,
    tags = ["manual"],
)

sh_test(
    name = "supports_pic_dylib_test",
    srcs = ["supports_pic_dylib_test.sh"],
    data = [":supports_pic_"],
    env = {"BINARY": "$(rootpath :supports_pic_)"},
    target_compatible_with = select({
        "@platforms//os:osx": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

platform_transition_binary(
    name = "supports_pic",
    binary = ":supports_pic_",
    target_platform = "@llvm//platforms:linux_x86_64",
)

cc_test(
    name = "windows_test",
    srcs = ["windows_test.cc"],
    exec_compatible_with = [
        "@platforms//os:windows",
    ],
    linkopts = [
        "-luuid",
    ],
    # TODO(zbarsky): Tests can't execute remotely from Windows hosts
    tags = ["no-remote"],
    target_compatible_with = [
        "@platforms//os:windows",
    ],
)

cc_test(
    name = "windows_unicode_test",
    srcs = ["windows_unicode_test.cc"],
    exec_compatible_with = [
        "@platforms//os:windows",
    ],
    linkopts = ["-municode"],
    # TODO(zbarsky): Tests can't execute remotely from Windows hosts
    tags = ["no-remote"],
    target_compatible_with = [
        "@platforms//os:windows",
    ],
)

cc_test(
    name = "pthread_test",
    srcs = ["pthread.cc"],
    copts = ["-pthread"],
    exec_compatible_with = HOST_CONSTRAINTS,
    linkopts = ["-pthread"],
    # remote-exec tests can't run without forcing the target platform to match
    # the remote exec platform.
    tags = ["no-remote"],
)

cc_test(
    name = "libomp_test",
    srcs = ["libomp_test.cc"],
    copts = ["-fopenmp"],
    exec_compatible_with = HOST_CONSTRAINTS,
    linkstatic = True,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    deps = ["@openmp//:libomp"],
)

cc_test(
    name = "header_parse_system_header",
    srcs = [
        "header_parse_system_header.h",
        "main.cc",
    ],
    features = [
        "layering_check",
        "parse_headers",
    ],
    # TODO(zbarsky): Tests can't execute remotely from Windows hosts
    tags = ["no-remote"],
    target_compatible_with = select({
        # TODO: Header parsing fails on windows
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

#######################################################

xray_cc_binary(
    name = "xray_main",
    srcs = ["xray_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

py_test(
    name = "xray_output_test",
    srcs = ["xray_output_test.py"],
    data = [":xray_main"],
    env = {
        "BINARY": "$(rootpath :xray_main)",
    },
    exec_compatible_with = HOST_CONSTRAINTS,
    main = "xray_output_test.py",
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

cc_library(
    name = "duplicate_symbol_a",
    srcs = ["duplicate_symbol_a.cc"],
)

cc_library(
    name = "duplicate_symbol_b",
    srcs = ["duplicate_symbol_b.cc"],
)

cc_static_library(
    name = "duplicate_symbol_lib",
    tags = ["manual"],
    target_compatible_with = _VALIDATE_STATIC_LIBRARY_COMPATIBLE,
    deps = [
        ":duplicate_symbol_a",
        ":duplicate_symbol_b",
    ],
)

cc_library(
    name = "comm_symbol_defs",
    srcs = [
        "comm_symbol_strong.c",
        "comm_symbol_tentative.S",
    ],
    tags = ["manual"],
)

cc_static_library(
    name = "comm_symbol_static_lib",
    target_compatible_with = _VALIDATE_STATIC_LIBRARY_COMPATIBLE,
    deps = [":comm_symbol_defs"],
)

sh_test(
    name = "duplicate_static_library_validator_test",
    size = "large",
    srcs = ["duplicate_static_library_failure_test.sh"],
    data = [
        "BUILD.bazel",
        "duplicate_symbol_a.cc",
        "duplicate_symbol_b.cc",
    ],
    env_inherit = ["PATH"],
    tags = ["local"],
    target_compatible_with = _VALIDATE_STATIC_LIBRARY_COMPATIBLE + select({
        "@platforms//os:windows": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

#######################################################

fuzzer_cc_binary(
    name = "fuzzer_main",
    srcs = ["fuzzer_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

profile_cc_binary(
    name = "profile_main",
    srcs = ["profile_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "fuzzer_output_test",
    srcs = ["fuzzer_output_test.sh"],
    data = [":fuzzer_main"],
    env = {
        "BINARY": "$(rootpath :fuzzer_main)",
    },
    rule = sh_test,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

fuzzer_asan_cc_binary(
    name = "fuzzer_asan_main",
    srcs = ["fuzzer_asan_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "fuzzer_asan_output_test",
    srcs = ["fuzzer_sanitizer_output_test.sh"],
    data = [":fuzzer_asan_main"],
    env = {
        "BINARY": "$(rootpath :fuzzer_asan_main)",
        "EXPECTED_OUTPUT": "ERROR: AddressSanitizer: heap-use-after-free",
        "EXPECT_NONZERO": "1",
        "INPUT_TEXT": "ASAN",
    },
    rule = sh_test,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

fuzzer_cc_binary(
    name = "fuzzer_ubsan_main",
    srcs = ["fuzzer_ubsan_main.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

exec_test(
    name = "fuzzer_ubsan_output_test",
    srcs = ["fuzzer_sanitizer_output_test.sh"],
    data = [":fuzzer_ubsan_main"],
    env = {
        "BINARY": "$(rootpath :fuzzer_ubsan_main)",
        "EXPECTED_OUTPUT": "runtime error: signed integer overflow",
        "EXPECT_NONZERO": "0",
        "INPUT_TEXT": "UBSAN",
    },
    rule = sh_test,
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],

py_test(
    name = "profile_output_test",
    srcs = ["profile_output_test.py"],
    data = [":profile_main"],
    env = {
        "BINARY": "$(rootpath :profile_main)",
    },
    exec_compatible_with = HOST_CONSTRAINTS,
    main = "profile_output_test.py",
    tags = ["no-remote"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:windows": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)
