alias(
    name = "clang_rt.fuzzer.static",
    actual = "@compiler-rt//:clang_rt.fuzzer.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.fuzzer_no_main.static",
    actual = "@compiler-rt//:clang_rt.fuzzer_no_main.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.fuzzer_interceptors.static",
    actual = "@compiler-rt//:clang_rt.fuzzer_interceptors.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.profile.static",
    actual = "@compiler-rt//:clang_rt.profile.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.builtins.static",
    actual = "@compiler-rt//:clang_rt.builtins.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.ubsan_standalone.static",
    actual = "@compiler-rt//:ubsan_standalone.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.ubsan_standalone_cxx.static",
    actual = "@compiler-rt//:ubsan_standalone_cxx.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.cfi.static",
    actual = "@compiler-rt//:cfi.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.cfi_diag.static",
    actual = "@compiler-rt//:cfi_diag.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.cfi_ignorelist",
    actual = "@compiler-rt//:cfi_ignorelist",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.msan.static",
    actual = "@compiler-rt//:msan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.msan_cxx.static",
    actual = "@compiler-rt//:msan_cxx.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.dfsan.static",
    actual = "@compiler-rt//:dfsan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.dfsan_abilist",
    actual = "@compiler-rt//:dfsan_abilist",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.nsan.static",
    actual = "@compiler-rt//:nsan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.safestack.static",
    actual = "@compiler-rt//:safestack.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.rtsan.static",
    actual = "@compiler-rt//:rtsan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.tysan.static",
    actual = "@compiler-rt//:tysan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.tsan.static",
    actual = "@compiler-rt//:tsan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.tsan_cxx.static",
    actual = "@compiler-rt//:tsan_cxx.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan.static",
    actual = "@compiler-rt//:asan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan_static.static",
    actual = "@compiler-rt//:asan_static.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan_cxx.static",
    actual = "@compiler-rt//:asan_cxx.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.asan.shared",
    actual = "@compiler-rt//:asan.shared",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.lsan.static",
    actual = "@compiler-rt//:lsan.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.xray.static",
    actual = "@compiler-rt//:clang_rt.xray.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.xray_basic.static",
    actual = "@compiler-rt//:clang_rt.xray_basic.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.crtbegin",
    actual = "@compiler-rt//:clang_rt.crtbegin.static",
    visibility = ["//visibility:public"],
)

alias(
    name = "clang_rt.crtend",
    actual = "@compiler-rt//:clang_rt.crtend.static",
    visibility = ["//visibility:public"],
)
